fix: Fixing text overflow issue for large words in mobile

--- a/app/slide-view.module.scss
+++ b/app/slide-view.module.scss
@@ -1,6 +1,7 @@
 .slide_view {
-  font-size: 64px;
+  width: 100%;
+  //font-size: 64px;
   font-weight: 600;
-  letter-spacing: 2px;
   text-transform: capitalize;
+  text-align: center;
 }
